Implemented LED light

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,6 @@ framework = arduino
 board = nodemcuv2
 
 ; Serial Monitor options
-monitor_port = COM5
+monitor_port = COM[35]
 monitor_speed = 74880
 monitor_filters = time, default
