Added heartbeat effect when all known devices are active at the same time Added heartbeat animation at startup (looks nice and its easy to spot a faulty LED this way) Logging is now only enabled in DEBUG mode for performance reasons

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,18 @@
 [platformio]
 default_envs = nodemcuv2
 
-[env:nodemcuv2]
+[env]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-
 ; Serial Monitor options
 monitor_port = COM[35]
 monitor_speed = 74880
+
+[env:debug_nodemcuv2]
+build_type = debug
+build_flags = -D DEBUG
+monitor_filters = time, default, esp8266_exception_decoder
+
+[env:nodemcuv2]
 monitor_filters = time, default
