Improved DEBUG mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ board = nodemcuv2
 monitor_port = COM[35]
 monitor_speed = 74880
 
-[env:debug_nodemcuv2]
+[env:nodemcuv2-debug]
 build_type = debug
 build_flags = -D DEBUG
 monitor_filters = time, default, esp8266_exception_decoder
