--- a/platformio.ini
+++ b/platformio.ini
@@ -12,17 +12,18 @@
 default_envs = nodemcuv2
 
 [env]
+; Hardware options
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-; Serial Monitor options
+; Serial monitor options
 monitor_port = COM[35]
 monitor_speed = 74880
+
+[env:nodemcuv2]
+monitor_filters = time, default
 
 [env:nodemcuv2-debug]
 build_type = debug
 build_flags = -D DEBUG
 monitor_filters = time, default, esp8266_exception_decoder
-
-[env:nodemcuv2]
-monitor_filters = time, default
